Fixing some readability issues with the Slate Bootstrap style.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,5 @@
 @import url(http://fonts.googleapis.com/css?family=Ubuntu:500&subset=latin,latin-ext);
 
-body{
- /* color: #2c3e50; */
-}
-
 .sidebar {
 	position: fixed;
 	top: 0px;
@@ -14,12 +10,12 @@ body{
 	text-align: center;
 	margin-bottom: 10px;
 }
-.sidebar-header .title{
+.sidebar-header .title {
 	letter-spacing: 3px;
 	text-transform: uppercase;
 }
 
-.sidebar-header .title a{
+.sidebar-header .title a {
 	text-decoration: none;
 	/* color: #2c3e50; */
 }
@@ -29,13 +25,16 @@ a.nav-link {
 	padding-top: 7px;
 	color: #aaa;
 }
-a.nav-link i{
+
+a.nav-link i {
 	font-size: 16px;
 }
+
 a.nav-link:hover { color: #777 }
 
 #bio {
-	font-family: "Courier New", Courier, monospace;
+	/*font-family: "Courier New", Courier, monospace;*/
+	font-style: italic;
 	font-size: 11px;
 	margin: 0 auto;
 	margin-bottom: 10px;
@@ -45,11 +44,11 @@ a.nav-link:hover { color: #777 }
 	padding-bottom: 10px;
 }
 
-article{
+article {
 	margin-bottom: 40px;
 }
 
-.article_body{
+.article_body {
 	margin-top: 20px;
 	margin-bottom: 20px;
 }
@@ -60,19 +59,35 @@ article{
 	letter-spacing: 3px;
 }
 
-article.home div a, article.home pre a { /* color: #2c3e50; */ }
-article.home div a:hover, article.home pre a:hover { /* color: #2c3e50; */ text-decoration: none; }
+h1,h2,h3,h4,h5,h6 { 
+	font-family: 'Ubuntu', sans-serif;
+	color: #5e6347; 
+}
 
-h1,h2,h3,h4,h5,h6{ font-family: 'Ubuntu', sans-serif; color: #5e6347; }
-h1 a,h2 a,h3 a,h4 a{ color: #5e6347; }
-h1 a:hover,h2 a:hover,h3 a:hover,h4 a:hover{ color: /* #e74c3c; */ }
+h1 a,h2 a,h3 a,h4 a { 
+	color: #5e6347; 
+}
 
-code {
-  color: ##c8c8c8 !important;
-  background-color: #59697c;
+h1 a:hover,h2 a:hover,h3 a:hover,h4 a:hover { 
+	color: #5e6347; 
+}
+
+article.home div a:hover, article.home pre a:hover {
+	text-decoration: none;
 }
 
 footer {
 	padding-top: 15px;
 	font-family: 'Ubuntu';
+}
+
+pre {
+	color: #a3b4c9;
+	border: #405b7c;
+  background-color: #405b7c;
+}
+
+code {
+  color: #a3b4c9;
+  background-color: #405b7c;
 }
